<resources>
    <string name="app_name">iRemember</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">iRemember</string>
    <string name="authority">edu.vanderbilt.mooc.moocprovider</string>
    <string name="story_view_button_label_delete">Delete</string>
    <string name="story_view_button_label_edit">Edit</string>
    <string name="story_view_deletion_dialog_title">Closing Activity</string>
    <string name="story_view_deletion_dialog_message">Are you sure you want to delete this entry?</string>
    <string name="story_view_deletion_dialog_yes">Yes</string>
    <string name="story_view_deletion_dialog_no">No</string>
    <string name="story_view_edittext_login_id_default_value">LoginId</string>
    <string name="story_view_edittext_story_id_default_value">StoryId</string>
    <string name="story_view_edittext_title_default_value">Title</string>
    <string name="story_view_edittext_body_default_value">Body</string>
    <string name="story_view_edittext_audio_link_default_value">Play Audio</string>
    <string name="story_view_edittext_video_link_default_value">Play Video</string>
    <string name="story_view_edittext_image_name_default_value">Image Name</string>
    <string name="story_view_edittext_image_meta_data_default_value">Image Data</string>
    <string name="story_view_edittext_tags_default_value">Tags</string>
    <string name="story_view_edittext_creation_time_default_value">Creation Time</string>
    <string name="story_view_edittext_story_time_default_value">Story Time</string>
    <string name="story_view_edittext_latitude_default_value">Latitude</string>
    <string name="story_view_edittext_longitude_default_value">Longitude</string>
    <string name="story_view_label_login_id">LoginId</string>
    <string name="story_view_label_story_id">StoryId</string>
    <string name="story_view_label_title">Title</string>
    <string name="story_view_label_body">Body</string>
    <string name="story_view_label_audio_link">Audio</string>
    <string name="story_view_label_video_link">Video</string>
    <string name="story_view_label_image_name">Image Name</string>
    <string name="story_view_label_image_meta_data">Image Data</string>
    <string name="story_view_label_tags">Tags</string>
    <string name="story_view_label_creation_time">Creation Time</string>
    <string name="story_view_label_story_time">Story Time</string>
    <string name="story_view_label_latitude">Latitude</string>
    <string name="story_view_label_longitude">Longitude</string>
    <string name="tags_view_button_label_delete">Delete</string>
    <string name="tags_view_button_label_edit">Edit</string>
    <string name="tags_view_deletion_dialog_title">Closing Activity</string>
    <string name="tags_view_deletion_dialog_message">Are you sure you want to delete this entry?</string>
    <string name="tags_view_deletion_dialog_yes">Yes</string>
    <string name="tags_view_deletion_dialog_no">No</string>
    <string name="tags_view_edittext_login_id_default_value">LoginId</string>
    <string name="tags_view_edittext_story_id_default_value">StoryId</string>
    <string name="tags_view_edittext_tag_default_value">Tag</string>
    <string name="tags_view_label_login_id">LoginId</string>
    <string name="tags_view_label_story_id">StoryId</string>
    <string name="tags_view_label_tag">Tag</string>
    <string name="story_list_button_label_add">Create a new story.</string>
    <string name="story_list_filter_hint">Enter text to filter story titles.</string>
    <string name="tags_list_button_label_add">ADD</string>
    <string name="tags_list_button_label_refresh">REFRESH</string>
    <string name="story_create_label_title">title:</string>
    <string name="story_create_label_body">body:</string>
    <string name="story_create_label_audio_link">audioLink:</string>
    <string name="story_create_label_video_link">videoLink:</string>
    <string name="story_create_label_image_name">imageName:</string>
    <string name="story_create_label_image_meta_data">imageMetaData:</string>
    <string name="story_create_label_tags">tags:</string>
    <string name="story_create_label_creation_time">creationTime:</string>
    <string name="story_create_label_story_time">storyTime:</string>
    <string name="story_create_label_latitude">latitude:</string>
    <string name="story_create_label_longitude">longitude:</string>
    <string name="story_create_title_hint_value">Enter a story title.</string>
    <string name="story_create_body_hint_value">Enter information about this story.</string>
    <string name="story_create_audio_link_default_value"></string>
    <string name="story_create_video_link_default_value"></string>
    <string name="story_create_image_name_default_value"></string>
    <string name="story_create_image_meta_data_default_value"></string>
    <string name="story_create_tags_default_value"></string>
    <string name="story_create_creation_time_default_value">0</string>
    <string name="story_create_story_time_default_value">0</string>
    <string name="story_create_latitude_default_value">0.0</string>
    <string name="story_create_longitude_default_value">0.0</string>
    <string name="story_create_audio_file_name_hint_value">Enter an audio file name (optional).</string>
    <string name="story_create_add_audio_button_text_value">Add Audio</string>
    <string name="story_create_video_file_name_hint_value">Enter a video file name (optional).</string>
    <string name="story_create_add_video_button_text_value">Add Video</string>
    <string name="story_create_image_name_hint_value">Enter a photo file name (optional).</string>
    <string name="story_create_add_image_button_text_value">Add Photo</string>
    <string name="story_create_set_time_text_value">Set Time</string>
    <string name="story_create_add_location_button_text_value">Get Location</string>
    <string name="story_create_latitude_text_value">Latitude</string>
    <string name="story_create_longitude_text_value">Longitude</string>
    <string name="story_create_button_label_clear">Clear</string>
    <string name="story_create_button_label_cancel">Cancel</string>
    <string name="story_create_button_label_create">Create</string>
    <string name="story_create_button_message_save">Save</string>
    <string name="story_create_button_message_reset">Reset</string>
    <string name="story_create_button_message_cancel">Cancel</string>
    <string name="tags_create_label_login_id">loginId:</string>
    <string name="tags_create_label_story_id">storyId:</string>
    <string name="tags_create_label_tag">tag:</string>
    <string name="tags_create_login_id_default_value">0</string>
    <string name="tags_create_story_id_default_value">0</string>
    <string name="tags_create_tag_default_value"></string>
    <string name="tags_create_button_label_clear">Clear</string>
    <string name="tags_create_button_label_cancel">Cancel</string>
    <string name="tags_create_button_label_create">Create</string>
    <string name="tags_create_button_message_save">Save</string>
    <string name="tags_create_button_message_reset">Reset</string>
    <string name="tags_create_button_message_cancel">Cancel</string>
    <string name="story_edit_label_login_id">Login ID</string>
    <string name="story_edit_label_story_id">Story ID</string>
    <string name="story_edit_label_title">Title</string>
    <string name="story_edit_label_body">Body</string>
    <string name="story_edit_label_audio_link">Audio File</string>
    <string name="story_edit_label_video_link">Video File</string>
    <string name="story_edit_label_image_title">Image Title</string>
    <string name="story_edit_label_image_meta_data">Image File Name</string>
    <string name="story_edit_label_tags">Tags</string>
    <string name="story_edit_label_creation_time">Creation Time</string>
    <string name="story_edit_label_story_time">Story Time</string>
    <string name="story_edit_label_latitude">Latitude</string>
    <string name="story_edit_label_longitude">Longitude</string>
    <string name="story_edit_new_button_value">New</string>
    <string name="story_edit_remove_button_value">Remove</string>
    <string name="story_edit_tags">Tags</string>
    <string name="story_edit_default_value_login_id"></string>
    <string name="story_edit_default_value_story_id"></string>
    <string name="story_edit_default_value_title"></string>
    <string name="story_edit_default_value_body"></string>
    <string name="story_edit_default_value_audio_link"></string>
    <string name="story_edit_default_value_video_link"></string>
    <string name="story_edit_default_value_image_title"></string>
    <string name="story_edit_default_value_image_meta_data"></string>
    <string name="story_edit_default_value_tags"></string>
    <string name="story_edit_default_value_creation_time"></string>
    <string name="story_edit_default_value_story_time"></string>
    <string name="story_edit_default_value_latitude"></string>
    <string name="story_edit_default_value_longitude"></string>
    <string name="story_edit_button_message_save">Save</string>
    <string name="story_edit_button_message_reset">Reset</string>
    <string name="story_edit_button_message_cancel">Cancel</string>
    <string name="tags_edit_label_login_id">LoginId</string>
    <string name="tags_edit_label_story_id">StoryId</string>
    <string name="tags_edit_label_tag">Tag</string>
    <string name="tags_edit_default_value_login_id"></string>
    <string name="tags_edit_default_value_story_id"></string>
    <string name="tags_edit_default_value_tag"></string>
    <string name="tags_edit_button_message_save">Save</string>
    <string name="tags_edit_button_message_reset">Reset</string>
    <string name="tags_edit_button_message_cancel">Cancel</string>
    <string name="ACCOUNT_TYPE">edu.vanderbilt.SyncProviderDemo.account</string>
    <string name="server">Server Address::</string>
    <string name="username">Username:</string>
    <string name="username_hint">username Hint!</string>
    <string name="password">Password:</string>
    <string name="password_hint">password Hint!</string>
    <string name="login">Login</string>
    <string name="authenticating">Authenticating</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="record_button_label">Record</string>
    <string name="title_activity_sound_record">SoundRecordActivity</string>
    <string name="listview_default_value_title">Title</string>
    <string name="listview_default_value_creation_time">Creation Time</string>
</resources>