<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/StoryEditRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="horizontal" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="640dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:scrollbars="none" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:shrinkColumns="*"
            android:stretchColumns="*" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <EditText
                    android:id="@+id/story_edit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <EditText
                    android:id="@+id/story_edit_body"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_span="3"
                    android:ellipsize="none"
                    android:scrollHorizontally="false" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/story_edit_audio_link_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/story_edit_label_audio_link"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/story_edit_audio_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:hint="@string/story_edit_default_value_audio_link"
                    android:padding="5dp" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right" >

                    <Button
                        android:id="@+id/story_edit_new_audio"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:text="@string/story_edit_new_button_value" />

                    <Button
                        android:id="@+id/story_edit_remove_audio"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:text="@string/story_edit_remove_button_value" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/story_edit_video_link_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/story_edit_label_video_link"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/story_edit_video_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:hint="@string/story_edit_default_value_video_link"
                    android:padding="5dp" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right" >

                    <Button
                        android:id="@+id/story_edit_new_video"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:text="@string/story_edit_new_button_value" />

                    <Button
                        android:id="@+id/story_edit_remove_video"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:text="@string/story_edit_remove_button_value" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/story_edit_image_title_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/story_edit_label_image_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/story_edit_image_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:hint="@string/story_edit_default_value_image_title" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/story_edit_image_meta_data_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/story_edit_label_image_meta_data"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/story_edit_image_meta_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:hint="@string/story_edit_default_value_image_meta_data"
                    android:padding="5dp" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right" >

                    <Button
                        android:id="@+id/story_edit_new_image"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:text="@string/story_edit_new_button_value" />

                    <Button
                        android:id="@+id/story_edit_remove_image"
                        android:layout_width="75dp"
                        android:layout_height="wrap_content"
                        android:text="@string/story_edit_remove_button_value" />
                </LinearLayout>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/story_edit_tags_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:text="@string/story_edit_tags"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <EditText
                    android:id="@+id/story_edit_tags"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_span="3"
                    android:hint="@string/story_edit_default_value_tags" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/story_edit_story_time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/story_edit_label_story_time"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/story_edit_story_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:hint="@string/story_edit_default_value_story_time"
                    android:padding="5dp"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/story_edit_latitude_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/story_edit_label_latitude"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/story_edit_latitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:hint="@string/story_edit_default_value_latitude" />
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal" >

                <TextView
                    android:id="@+id/story_edit_longitude_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/story_edit_label_longitude"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/story_edit_longitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:hint="@string/story_edit_default_value_longitude" />
            </TableRow>
        </TableLayout>
    </ScrollView>

    <Button
        android:id="@+id/story_edit_button_save"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:text="@string/story_edit_button_message_save" />

    <Button
        android:id="@+id/story_edit_button_reset"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/story_edit_button_save"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/story_edit_button_message_reset" />

    <Button
        android:id="@+id/story_edit_button_cancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/story_edit_button_message_cancel" />

</RelativeLayout>